--- a/config/tip_config.yaml
+++ b/config/tip_config.yaml
@@ -1,24 +1,29 @@
 GENERAL:
-  GPU_ID: 3
+  GPU_ID: 0
   SEED: 123
   WORKER: 8
   SAVE_PREFIX: './out_dir/tip'
-  EXP_NAME: 'exp_light'
+  EXP_NAME: 'exp'
 
 DATA:
   DATA_TYPE: TIP # Please specify the type of the dataset (select from AIM/UHDM/FHDMi/TIP)
-  TRAIN_DATASET: # The training data path, e.g., ./uhdm_data/Train
-  TEST_DATASET: # The test data path, e.g., ./uhdm_data/Test
+  TRAIN_DATASET: './tip_data/trainData' # The training data path, e.g., './uhdm_data/Train'
+  TEST_DATASET: './tip_data/testData' # The test data path, e.g., './uhdm_data/Test'
+  DEMO_DATASET: './tip_data/demoData' # The demo data path, e.g., './uhdm_data/Demo'
 
 MODEL:
+# ESDNet configuration
+  MODEL_NAME: 'ESDNet' # The model name, e.g., ESDNet, ESDNet-L
   EN_FEATURE_NUM: 48 # The initial channel number of dense blocks of encoder
   EN_INTER_NUM: 32 # The growth rate (intermediate channel number) of dense blocks of encoder
   DE_FEATURE_NUM: 64 # The initial channel number of dense blocks of decoder
   DE_INTER_NUM: 32 # The growth rate (intermediate channel number) of dense blocks of decoder
   SAM_NUMBER: 1 # The number of SAM for each encoder or decoder level; set 1 for our ESDNet, and 2 for ESDNet-L
+# MyNet configuration
+#  MODEL_NAME: 'MyNet' # The model name, e.g., MyNet, MyNet-L
 
 TRAIN:
-  BATCH_SIZE: 2
+  BATCH_SIZE: 8
   #LOADER: crop # The loading way for training data, e.g., crop, resize, default; see ./dataset/load_data.py
   #CROP_SIZE: 768 # Set the crop size if LOADER==crop
   #RESIZE_SIZE: 384 # Set the resizing size if LOADER==crop
@@ -30,7 +35,8 @@ TRAIN:
 TEST:
   TEST_EPOCH: 70 # Input 'auto' for loading the latest model
   SAVE_IMG: False # The file type (e.g., jpg, png) for saving the output image; set False to avoid saving
-  LOAD_PATH: False # If specify a load path for a checkpoint, TEST_EPOCH will be deprecated
+  # LOAD_PATH: False # If specify a load path for a checkpoint, TEST_EPOCH will be deprecated
+  LOAD_PATH: './out_dir/tip/exp/net_checkpoints/checkpoint_latest.tar' # If specify a load path for a checkpoint, TEST_EPOCH will be deprecated
   EVALUATION_METRIC: True # If True, calculate metrics
   EVALUATION_TIME: False # If True, calculate processing time per image; EVALUATION_METRIC will be deprecated for accurate statistics
   EVALUATION_COST: False #If True, calculate MACs and Parameters number
