--- a/config/tip_config.yaml
+++ b/config/tip_config.yaml
@@ -19,10 +19,17 @@ MODEL:
   DE_FEATURE_NUM: 64 # The initial channel number of dense blocks of decoder
   DE_INTER_NUM: 32 # The growth rate (intermediate channel number) of dense blocks of decoder
   SAM_NUMBER: 1 # The number of SAM for each encoder or decoder level; set 1 for our ESDNet, and 2 for ESDNet-L
+# UNet configuration
+  # MODEL_NAME: 'UNet'
+  # IN_DIM: 3
+  # FEAT_DIM: 64
+  # OUT_DIM: 3
 # MyNet configuration
 #  MODEL_NAME: 'MyNet' # The model name, e.g., MyNet, MyNet-L
 
 TRAIN:
+  USE_GAN: False
+  D_ITERS: 1
   BATCH_SIZE: 24
   #LOADER: crop # The loading way for training data, e.g., crop, resize, default; see ./dataset/load_data.py
   #CROP_SIZE: 768 # Set the crop size if LOADER==crop
@@ -34,7 +41,9 @@ TRAIN:
   LAM: 1 # The loss weight for L1 loss
   LAM_P: 1 # The loss weight for perceptual loss
 # MyLoss configuration
-#  LOSS_NAME: 'MyLoss'
+  # LOSS_NAME: 'MyLoss'
+  # LAM_P: 2
+  # LAM_ADV: 0.5
 
 TEST:
   TEST_EPOCH: 70 # Input 'auto' for loading the latest model
