--- a/config/mynet_tip_config.yaml
+++ b/config/mynet_tip_config.yaml
@@ -1,12 +1,13 @@
 # default: Avg. LPIPS=0.0769, PSNR=27.4572, SSIM=0.8967
 # FRB(skip): Avg. LPIPS=0.0878, PSNR=27.6970, SSIM=0.8998
-# FULL(skip+bottleneck):
-
+# FULL(skip+bottleneck): Avg. LPIPS=0.0711, PSNR=27.7646, SSIM=0.8998
+# FULL2(skip+bottleneck+PosEnc+Freqloss): Avg. LPIPS=0.0703, PSNR=27.8745, SSIM=0.8962
+# FULL4(skip+bottleneckV2+PosEnc): Avg. LPIPS=0.0673, PSNR=28.2967, SSIM=0.9026
 GENERAL:
   SEED: 123
   WORKER: 8
   SAVE_PREFIX: '.out_dir/tip'
-  EXP_NAME: 'FULL'
+  EXP_NAME: 'FULL4'
 
 DATA:
   DATA_TYPE: TIP # Please specify the type of the dataset (select from AIM/UHDM/FHDMi/TIP)
@@ -55,7 +56,7 @@ TEST:
   TEST_EPOCH: 'auto' # Input 'auto' for loading the latest model
   SAVE_IMG: False # The file type (e.g., jpg, png) for saving the output image; set False to avoid saving
   # LOAD_PATH: False # If specify a load path for a checkpoint, TEST_EPOCH will be deprecated
-  LOAD_PATH: '.out_dir/tip/FULL/net_checkpoints/checkpoint_latest.tar' # If specify a load path for a checkpoint, TEST_EPOCH will be deprecated
+  LOAD_PATH: '.out_dir/tip/FULL4/net_checkpoints/checkpoint_latest.tar' # If specify a load path for a checkpoint, TEST_EPOCH will be deprecated
   EVALUATION_METRIC: True # If True, calculate metrics
   EVALUATION_TIME: False # If True, calculate processing time per image; EVALUATION_METRIC will be deprecated for accurate statistics
   EVALUATION_COST: False #If True, calculate MACs and Parameters number
